--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ h6,
 }
 
 .page-header {
-    background: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .1)), url(../img/carousel-1.jpg) center center no-repeat;
     background-size: cover;
 }
 
@@ -514,4 +514,11 @@ h6,
 .footer .copyright .text-bg-copyright:hover,
 .footer .copyright .text-bg-copyright a:hover {
     color: rgba(255,255,255,0.5) !important;
+}
+
+.co-fou-text {
+    font-size: .655em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: clip;
 }
