--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ h4,
 .display-4,
 .display-5,
 .display-6 {
-    font-family: 'Grand Hotel', cursive;
+    font-family: 'Lobster (Original)', cursive;
     font-weight: 700;
 }
 
@@ -97,7 +97,7 @@ h6,
 }
 
 .font-secondary {
-    font-family: 'Grand Hotel', cursive;
+    font-family: 'Lobster (Original)', cursive;
 }
 
 
