--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -6,7 +6,7 @@ $dark: #103741;
 
 $font-family-base: 'Heebo', sans-serif;
 
-$headings-font-family: 'Inter', sans-serif;
+$headings-font-family: 'Playfair Display', sans-serif;
 
 $body-bg: $light;
 
