--- a/css/style.css
+++ b/css/style.css
@@ -497,7 +497,7 @@ h6,
     position: absolute;
     width: 100%;
     height: 45px;
-    top: 50%;
+    top: 55%;
     left: 0;
     transform: translateY(-50%);
     display: flex;
@@ -566,6 +566,7 @@ h6,
   display: -webkit-box;
   -webkit-line-clamp: 8;
   -webkit-box-orient: vertical;
+  margin-bottom: 3rem;
 }
 
 .testimonial-footer {
@@ -638,6 +639,7 @@ h6,
 
   .testimonial-text {
     -webkit-line-clamp: 6;
+    margin-bottom: 3rem;
   }
 
   .testimonial-footer {
@@ -655,11 +657,16 @@ h6,
     margin-left: 0;
     margin-top: 10px;
   }
+
+  .testimonial-carousel .owl-nav {
+    top: 55%;
+  }
 }
 
 @media (max-width: 480px) {
   .testimonial-text {
     font-size: 1rem;
+    margin-bottom: 3rem;
   }
 
   .testimonial-name {
@@ -668,6 +675,10 @@ h6,
 
   .testimonial-role {
     font-size: 0.85rem;
+  }
+
+  .testimonial-carousel .owl-nav {
+    top: 55%;
   }
 }
 
