--- a/css/style.css
+++ b/css/style.css
@@ -629,6 +629,31 @@ h6,
   pointer-events: none;
 }
 
+.testimonial-style-link {
+    font-size: 1rem;
+    text-decoration: none;
+    font-weight: 500;
+    transition: color 0.3s ease;
+    background-color: transparent;
+    border: none;
+    text-align: center;
+  }
+
+.google-word {
+    display: inline;
+    white-space: nowrap;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+    font-size: 1.2rem;
+  }
+
+.testimonial-style-link:hover {
+    color: #103741;
+    font-size: 1.1rem;
+    box-shadow: 0 4px 20px var(--primary);
+    border-radius: 45px;
+  }
+
 
 @media (max-width: 768px) {
   .testimonial-item-modern {
@@ -690,6 +715,13 @@ h6,
   .testimonial-carousel .owl-nav {
     top: 55%;
   }
+  .testimonial-style-link {
+    font-size: 0.8125rem;
+  }
+
+  .testimonial-style-link:hover {
+    font-size: 0.875rem;
+  }
 }
 
 .testimonial-item-modern.item-modern-color-man {
@@ -732,28 +764,6 @@ h6,
     0 20px 30px rgba(156, 39, 176, 0.4),
     inset 0 -4px 10px rgba(156, 39, 176, 0.2);
 }
-
-.testimonial-style-link {
-    font-family: Roboto, Arial, sans-serif;
-    font-size: 16px;
-    text-decoration: none;
-    font-weight: 500;
-    transition: color 0.3s ease;
-    background-color: transparent;
-    border: none;
-  }
-
-.testimonial-style-link span{
-    font-size: 18px;
-    font-weight: 600;
-  }
-
-.testimonial-style-link:hover {
-    color: #103741;
-    font-size: 17px;
-    box-shadow: 0 4px 20px var(--primary);
-    border-radius: 45px;
-  }
 
 
 
